# lttw

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  PROMPT.md  README.md  TODO.md  TODO_DONE.md  lttw-workspace.toml  test_debug.rs  test_nvim_config.lua
examples/: test_trace.rs
src/: autocmd.rs  autocommands.rs  cache.rs  commands.rs  config.rs  context.rs  debug.rs  diagnostics.rs  diff_chunk.rs  error.rs  filetype.rs  fim.rs  instruction.rs  keymap.rs  lib.rs  llama_client.rs  log.rs  lsp_completion.rs  main.rs  otel.rs  plugin_state.rs  ring_buffer.rs  router.rs  server_launch.rs  utils.rs
src/fim/: accept.rs  cycle.rs  info_stats.rs  mod.rs  render.rs  state.rs
tests-integration/: Cargo.toml  build.rs
tests-integration/src/: lib.rs
