[package]
name = "lttw"
version = "0.1.0"
edition = "2024"

[lib]
name = "lttw"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator", "libuv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
regex = "1.12"
once_cell = "1.21"
rand = {version = "0.10", features = ["thread_rng"]}
parking_lot = "0.12"
ahash = "0.8.12"
gix-diff = { version = "0.61", features = ["blob-experimental"] }
gix = { version = "0.81", features = ["blob-diff", "index"] }
gix-hash = "0.14"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
