[package]
name = "lttw"
version = "0.1.0"
edition = "2024"

[lib]
name = "lttw"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator", "libuv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
regex = "1.12"
once_cell = "1.21"
rand = {version = "0.10", features = ["thread_rng"]}
parking_lot = "0.12"
ahash = "0.8.12"
gix-diff = { version = "0.61", features = ["blob-experimental", "sha1"]}
tracing = "0.1.41"
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
    "experimental_metrics_custom_reader",
    "testing",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "metrics",
    "grpc-tonic",
] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace", "metrics"] }
tracing-appender = "0.2.4"
papaya = "0.2.4"

