[package]
name = "lttw-integration-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # CRITICAL: Must be cdylib for nvim-oxi tests

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator"] }
lttw = { path = ".." }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator"] }
