[package]
name = "lttw-integration-tests"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator"] }
lttw = { path = ".." }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
nvim-oxi = { version = "0.6", features = ["neovim-0-11", "test", "test-terminator"] }
